# shoe_store

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
shoe_store/: __init__.py  extensions.py  models.py  shoe_categories.py
shoe_store/core/: routes,py  routes.py
shoe_store/core/templates/core/: index.html  pagination.html  shoe_detail.html
shoe_store/shoes/: routes.py
shoe_store/shoes/templates/shoes/: edit_food.html  edit_shoe.html  index.html  new_food.html  new_shoe.html  search_dropdown.html  search_results.html
shoe_store/templates/: layout.html  navbar.html
shoe_store/users/: routes.py
shoe_store/users/templates/users/: change_password.html  index.html  login.html  profile.html  register.html
